Fix T90634: Gizmo.target_set_value() crash without a valid property

Raise an exception when target properties have not been set.